CHANGE LOG

????-??-?? AIM Version 2.6 development for BATTLETECH 1.2.0

* New: Set nameplate text colour.
* Fix: FacingMarkerEnemyColors not applied when FacingMarkerPlayerColors is empty.
* Fix: NPE when FacingMarkerPlayerColors is non-empty but FacingMarkerEnemyColors is empty.
* Fix: FloatingArmorColours no longer applies to target panel and runs faster.

2018-09-15 AIM Version 2.5 for BATTLETECH 1.2.0

* New: Fix heat prediction on move/jump/sprint preview.
* New: Show distance number in target panel, and movement point in selection panel.
* New: Show pilot stats in one-line mouseover hint, instead of only HP.
* New: Variable melee height difference limit by mech class.
* New: Configure friends' and foes' crit multiplier.
* New: Vehicles and Turrets may now be crit'ed and killed by ammo explosions.
* New: Critical hits now follows damage transfer.
* New: Critical hits rates and cap may be set.
* New: Critical hits may optionally happens through armour.
* New: Critical hits may optionally ignore destroyed component and space.
* New: Critical hits may optionally be transferred inward when there is nothing to crit.
* New: Critical hits may optionally be rolled until there is no more crit chance.
* New: Prevent critical hit on locations with intact structure.
* New: Attack Log now logs DFA self-damage and overheat self-damage.
* Mod: Make see-through armour compatible with Mech Engineer's composite structure.
* Mod: Assume mod not found when mod compatibility check is executed at the wrong time.
* Mod: UnlockMeleePositioning and FixPaperDollRearStructure switched to IL code patch.
* Fix: Turret and Building LOS are now always coloured as front attack, instead of side or rear.
* Fix: Fix FixBossHeadCalledShotDisplay regression.
* Fix: Jumped modifier should no longer persist into next turn.
* Fix: First line in Attack Log will no longer be an empty crit on slot 1.

2018-08-28 AIM Version 2.2.1 for BATTLETECH 1.2.0

* Fix: Grey head disease regression.